--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^3.2.3",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "axios": "^1.7.9",
     "framer-motion": "^11.15.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
